force-app/main/default/objects/Automated_Report__c/Automated_Report__c.object-meta.xml
<CustomObject>
    <description>An object that controls the reports run as part of the nightly Automated Report job</description>
    <label>Automated Report Processing Option</label>
    <nameField>
        <label>Automated Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automated Report Processing Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>