force-app/main/default/objects/Automated_Report__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the report is considered for the nightly job</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>