force-app/main/default/objects/Automated_Report__c/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <description>Id for the Campaign Member to be added to</description>
    <label>Campaign Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>