force-app/main/default/objects/Automated_Report__c/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <description>Status that the campaign members are inserted as</description>
    <label>Campaign Member Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>