force-app/main/default/objects/Automated_Report__c/fields/Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Distribution_List__c</fullName>
    <description>List of Emails that the results are sent to in comma separated form</description>
    <label>Distribution List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>