force-app/main/default/objects/Automated_Report__c/fields/ECOMM__c.field-meta.xml
<CustomField>
    <fullName>ECOMM__c</fullName>
    <label>ECOMM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>