force-app/main/default/objects/Automated_Report__c/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <description>Email template that will be sent if reports meet the threshold</description>
    <label>Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>