force-app/main/default/objects/Automated_Report__c/fields/Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Run__c</fullName>
    <description>Last time the report was run through the job</description>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>