force-app/main/default/objects/Automated_Report__c/fields/Notification_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Notification_Threshold__c</fullName>
    <description>The number of records that must appear in order for an admin to be notified.</description>
    <label>Notification Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>