force-app/main/default/objects/Automated_Report__c/fields/Print_List__c.field-meta.xml
<CustomField>
    <fullName>Print_List__c</fullName>
    <description>Contains the text that appears in the subject of the email</description>
    <label>Print List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>