force-app/main/default/objects/Automated_Report__c/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field required if using an email template. This user will receive an email if the threshold value is met.</description>
    <label>Related User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Automated_Report_Processing_Options</relationshipName>
    <type>Lookup</type>
</CustomField>