force-app/main/default/objects/Automated_Report__c/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <description>Report that is used to determine the campaign members to add</description>
    <label>Report ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>