force-app/main/default/objects/Automated_Report__c/fields/Run_Required__c.field-meta.xml
<CustomField>
    <fullName>Run_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is true, the report will always get ran during the job</description>
    <label>Run Required</label>
    <type>Checkbox</type>
</CustomField>