force-app/main/default/objects/Automated_Report__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <description>Either the day of week or day of the month that the report will run. (Monday, Tuesday... OR 1, 2, 3, 25, 26)</description>
    <label>Schedule Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>