force-app/main/default/objects/Automated_Report__c/fields/Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Frequency__c</fullName>
    <description>How often the report is run. It uses the last run date to determine how long it's been between runs.</description>
    <label>Schedule Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>