force-app/main/default/objects/Automated_Report__c/recordTypes/Data_Quality_Reports.recordType-meta.xml
<RecordType>
    <fullName>Data_Quality_Reports</fullName>
    <active>true</active>
    <description>Reports used for internal use to monitor various data</description>
    <label>Data Quality Reports</label>
</RecordType>