force-app/main/default/objects/Automated_Report__c/recordTypes/Department_List_Pulls.recordType-meta.xml
<RecordType>
    <fullName>Department_List_Pulls</fullName>
    <active>true</active>
    <description>Reports that identify new admittees and sends out a distribution list</description>
    <label>Department List Pulls</label>
</RecordType>