force-app/main/default/objects/Automated_Report__c/validationRules/Related_User_for_Email_Template.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_User_for_Email_Template</fullName>
    <active>true</active>
    <description>If an email template value exists, then there must be a related user.</description>
    <errorConditionFormula>Email_Template_Id__c != null &amp;&amp; Related_User__c == null</errorConditionFormula>
    <errorMessage>A related user is required when using an email template</errorMessage>
</ValidationRule>